Updating with placeholders on file; main, docker setup, and docs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,11 @@
-DATABASE_URL=postgresql://user:password@localhost/dbname
-JWT_SECRET=your-secret-key
+# Database (PostgreSQL)
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/crypto_exchange
+
+# FastAPI / Security
+SECRET_KEY=your-very-long-random-secret-key-change-this-1234567890abcdef
 ALGORITHM=HS256
- 
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# For later - do NOT commit real keys!
+# CONTROL_WALLET_BTC=your_btc_address_here
+# etc.
