--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
-myvenv++/ 
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+.pytest_cache/
+.mypy_cache/
+
+# Node
+node_modules/
+dist/
+
+# Env files
+.env
+.env.*
+!.env.example
+
+# Logs
+*.log
+logs/
+
+# OS/IDE
+.DS_Store
+.vscode/
+.idea/
