--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.109.2
 uvicorn==0.27.1
 sqlalchemy==2.0.25
+asyncpg==0.29.0
 databases
 pydantic==2.6.1
 pydantic-settings==2.1.0
@@ -10,7 +11,7 @@ python-multipart==0.0.6
 ccxt==4.2.1
 web3==6.15.1
 python-dotenv==1.0.1
-psycopg2-binary==2.9.9
+psycopg[binary]==3.2.1
 aiofiles==23.1.0
 pytest==7.4.0
 httpx==0.25.1
